small test change
Changed the title of the page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
+    <title>Alan's Web Page</title>
 
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <h1>Hello, world!</h1>
-    <p>This is a simple HTML page linked to CSS and JS.</p>
+    <h1>Welcome</h1>
+    <p>This is where I share my thoughts and Ideas.</p>
 
     <!-- Link to external JavaScript -->
     <script src="script.js"></script>
