some big updates
Changes made to CSS, html and a new directory added

--- a/Template.html
+++ b/Template.html
@@ -6,7 +6,7 @@
     <title>Alan's Web Page</title>
 
     <!-- Link to external CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <div class="container">
