--- a/faith/Reconquista.html
+++ b/faith/Reconquista.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+<div class="containor">
 <header>
     <h1>Operation Reconquista</h1>
     <p>Here I discuss Operation Reconquista, what it is and why it might be important. If you want to know more read on.</p>
@@ -72,6 +73,7 @@ By the late 15th century, only one Muslim state remained: the <strong>Kingdom of
 <p>
 In <strong>1492</strong>, Granada surrendered to <strong>King Ferdinand of Aragon</strong> and <strong>Queen Isabella of Castile</strong>. This event is traditionally seen as the <strong>end of the Reconquista</strong>.
 </p>
+</div>
 </div>
     <!-- Link to external JavaScript -->
     <script src="script.js"></script>
