--- a/faith/Reconquista.html
+++ b/faith/Reconquista.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-<div class="containor">
+<div class="container">
 <header>
     <h1>Operation Reconquista</h1>
     <p>Here I discuss Operation Reconquista, what it is and why it might be important. If you want to know more read on.</p>
@@ -48,7 +48,7 @@ A major turning point in the Reconquista was the <strong>Battle of Las Navas de 
 This victory greatly weakened Muslim control and allowed Christian kingdoms to expand more rapidly in the following centuries.
 </p>
 
-<h2>Christian Expansion (13th–15th Centuries)</h2>
+<h3>Christian Expansion (13th–15th Centuries)</h3>
 
 <p>
 After 1212, Christian forces captured many important cities, including:
