Picture of a knight
A picture to set the scene

--- a/faith/Reconquista.html
+++ b/faith/Reconquista.html
@@ -12,6 +12,7 @@
 <div class="container">
 <header>
     <h1>Operation Reconquista</h1>
+	<img src="../resources/Knight.png" alt="A Christian knight in Southern Spain">
     <p>Here I discuss Operation Reconquista, what it is and why it might be important. If you want to know more read on.</p>
 </header>
 <div class="article">
